# MRichTextEditor

./: CMakeLists.txt
src/: CMakeLists.txt  mrichtextedit.cpp  mrichtextedit.ui  mtextedit.cpp
src/include/: mrichtextedit.h
src/mrichedit_icons/: icons.qrc  picture_origin.txt
src/res/: convert.sh  icons.qrc  picture_origin.txt
test/: CMakeLists.txt  test.cpp
